@@ -1,11 +1,12 @@
 <?php
 
-	// DO NOT REMOVE OR CHANGE THESE 2 LINES:
+// DO NOT REMOVE OR CHANGE THESE 2 LINES:
 $MCONF['name'] = 'tools_txsolradminM1';
 $MCONF['script'] = '_DISPATCH';
-	
+
 $MCONF['access'] = 'user,group';
 
 $MLANG['default']['tabs_images']['tab'] = 'moduleicon.gif';
 $MLANG['default']['ll_ref'] = 'LLL:EXT:solradmin/mod1/locallang_mod.xml';
+
 ?>
